# AI-Agent-CRM

./: .env  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  a2a_services.py  docker-compose.yml  main.py  orchestrator.py  parse_test.py  pyproject.toml  pytest.ini  requirements.txt  test.py
.claude/agents/: design.md  f2e.md  human-escalation.md  intention-router.md  inventory-management.md  orchestrator.md  order-query.md  payment-shipping.md  policy-information.md  product-recommendation.md  spec.md  technical-support.md
.github/workflows/: ci.yml
agents/: a2a_apps.py  human_escalation_agent.py  inventory_management_agent.py  models.py  order_query_agent.py  payment_shipping_agent.py  policy_information_agent.py  product_recommendation_agent.py  technical_support_agent.py
cores/: constants.py  settings.py  storages.py
dummy_data/: all_conversations.json  custom.json  faq-classification.csv  intentions.json  parse_data.py  products.json  test_data.csv  updated_test_data.csv
intentions/: agent.py  router.py
scripts/: agent_data_load.py  agent_test.py
tests/: constants.py  test_intentions.py  test_order_query_process.py  test_product_recommendation_process.py  test_technical_support_process.py
utils/: parser.py
