[project]
name = "AI-Agent-CRM"
version = "0.1.0"
description = ""
authors = [
    {name = "yun",email = "kilicapeto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "logfire[fastapi] (>=3.22.0,<4.0.0)",
    "pymilvus[milvus-lite] (>=2.6.2,<3.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "faiss-cpu (>=1.12.0) ; python_version >= \"3.12\" and python_version < \"3.15\"",
    "pydantic-ai (>=1.0.11,<2.0.0)",
    "pydantic-ai-slim[a2a] (>=1.0.11,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
